--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "indesign-scripts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "description": "InDesign Scripts for Oriental typesetting. ",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./watch.sh"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wujimacha/InDesign-Scripts.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [ "typographay", "indesign-scripts", "cjk" ],
+  "author": "Toto Minai <the@unpopular.me> (https://chunghwa.asia)",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/wujimacha/InDesign-Scripts/issues"
   },
